tests/negative/gold/static3-test.gold
tests/negative/static3-test.toit:5:8: error: Toplevel functions can't have the 'static' modifier
static foo:
       ^~~
Compilation failed
